--- a/master/DeviceManager/DeviceManager/Views/AddDeviceDialog.xaml
+++ b/master/DeviceManager/DeviceManager/Views/AddDeviceDialog.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:DeviceManager.Views"
         mc:Ignorable="d"
-        Title="AddDeviceDialog" Height="450" Width="800">
+        Title="{Binding Title , FallbackValue='Add Device details'}" Height="450" Width="500">
    
 
     <Grid>
