Added field validation

--- a/master/DeviceManager/DeviceManager/Views/AddDeviceDialog.xaml
+++ b/master/DeviceManager/DeviceManager/Views/AddDeviceDialog.xaml
@@ -6,9 +6,21 @@
         xmlns:local="clr-namespace:DeviceManager.Views"     
         xmlns:validationrules="clr-namespace:DeviceManager.Common;assembly=DeviceManager.Common"
         mc:Ignorable="d"
-        Title="{Binding Title , FallbackValue='Add Device details'}" Height="450" Width="500">
-   
+        Title="{Binding Title , FallbackValue='Add Device details'}" Height="450" Width="500" Background="LightBlue">
 
+    <Window.Resources>     
+
+        <Style x:Key="textBoxInError" TargetType="TextBox">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="true">
+                    <Setter Property="ToolTip"
+                            Value="{Binding RelativeSource={x:Static RelativeSource.Self},
+                        Path=(Validation.Errors)[0].ErrorContent}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+    </Window.Resources>
+    
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="Auto"/>
@@ -26,9 +38,11 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <TextBlock Text="ID" Grid.Column="0" Grid.Row="0" Margin="15,15,15,5" FontSize="16"/>
-        <TextBox Text="{Binding ID, UpdateSourceTrigger=PropertyChanged, FallbackValue='BINDING ERROR'}" Grid.Column="1" Grid.Row="0" Margin="15,15,15,5" FontSize="16" IsReadOnly="{Binding IsReadonly}"/>
       
+        <TextBlock Text="ID" Grid.Column="0" Grid.Row="0" Margin="15,15,15,5" FontSize="16"/>
+        <TextBox Style="{StaticResource textBoxInError}" Name="txtID"  Text="{Binding Path= ID, UpdateSourceTrigger=PropertyChanged, FallbackValue='Enter ID',ValidatesOnDataErrors=True}"  Grid.Column="1" Grid.Row="0" Margin="15,15,15,5" FontSize="16"/>
+            
+        
         <TextBlock Text="Location" Grid.Column="0" Grid.Row="1" Margin="15,15,15,5" FontSize="16"/>
         <TextBox Text="{Binding Location, FallbackValue='BINDING ERROR'}" Grid.Column="1" Grid.Row="1" Margin="15,15,15,5"  FontSize="16" />
 
@@ -43,12 +57,12 @@
         <TextBox Text="{Binding Last_Used, UpdateSourceTrigger=PropertyChanged, FallbackValue='BINDING ERROR'}" Grid.Column="1" Grid.Row="4" Margin="15,15,15,5" FontSize="16" IsReadOnly="{Binding IsReadonly}"/>
 
         <TextBlock Text="Price" Grid.Column="0" Grid.Row="5" Margin="15,15,15,5" FontSize="16"/>
-        <TextBox Text="{Binding Price, FallbackValue='BINDING ERROR',ValidatesOnDataErrors=True}" Grid.Column="1" Grid.Row="5" Margin="15,15,15,5"  FontSize="16" />
+        <TextBox Style="{StaticResource textBoxInError}" Text="{Binding Price, FallbackValue='BINDING ERROR',ValidatesOnDataErrors=True}" Grid.Column="1" Grid.Row="5" Margin="15,15,15,5"  FontSize="16" />
        
 
         <TextBlock Text="Color" Grid.Column="0" Grid.Row="6" Margin="15,15,15,5" FontSize="16"/>
         <TextBox Text="{Binding Color, FallbackValue='BINDING ERROR'}" Grid.Column="1" Grid.Row="6" Margin="15,15,15,5"  FontSize="16" />
-
+      
 
         <StackPanel Orientation="Horizontal" Grid.Row="8" Grid.Column="2" HorizontalAlignment="Right">
 
