--- a/master/DeviceManager/DeviceManager/MainWindow.xaml
+++ b/master/DeviceManager/DeviceManager/MainWindow.xaml
@@ -29,7 +29,7 @@
             </StackPanel>
             <!--Calender control and also a display of the color code can be added for professional look and feel of the UI-->
             <StackPanel Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Auto"  ScrollViewer.VerticalScrollBarVisibility="Auto" Height="500"   Orientation="Horizontal" HorizontalAlignment="Center"  VerticalAlignment="Top">
-                <DataGrid ItemsSource="{Binding Path=Devices}" SelectedItem="{Binding Path=SelectedDevice, Mode=TwoWay}" AutoGenerateColumns="False" >
+                <DataGrid SelectionMode="Single" ItemsSource="{Binding Path=Devices}" SelectedItem="{Binding Path=SelectedDevice, Mode=TwoWay}" AutoGenerateColumns="False" >
                 <DataGrid.Columns>
                     <DataGridTextColumn Header="ID" Binding="{Binding Path= id}" Width="50" />
                         <DataGridTextColumn Header="Location" Binding="{Binding Path= location}" Width="250" />
